# mind-forge

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.e2e  Dockerfile.e2e-rust  LICENSE  README.md  build.rs  cliff.toml  lefthook.yml
.github/workflows/: ci.yml  release.yml
docker/: e2e.Dockerfile
docs/: deprecations.md  glossary.md  manual.md  mf-extensions.md  migration-from-mind.md  schema-naming.md  term-lint.md
scripts/: e2e.sh
skill/: SKILL.md
skills/mf-cli/: SKILL.md
skills/mf-plan/: SKILL.md
skills/mf-source/: SKILL.md  manifest.json
skills/mf-write/: SKILL.md
src/: defaults.rs  error.rs  exit.rs  main.rs
src/cli/: article.rs  asset.rs  build.rs  completion.rs  config.rs  deprecation.rs  mod.rs  project.rs  prompt.rs  publish.rs  publisher.rs  render.rs  shared_flags.rs  source.rs  source_advanced.rs  term.rs  (+2 more)
templates/: postmortem.md
tests/: cli_aliases.rs  cli_article.rs  cli_article_binding.rs  cli_article_blank_default.rs  cli_article_block_rm.rs  cli_article_convert_merge.rs  cli_article_convert_prompt_thinking.rs  cli_article_rename_prompt_thinking.rs  cli_article_rm.rs  cli_article_template_errors.rs  cli_article_typora_frontmatter.rs  cli_article_update.rs  cli_asset_add.rs  cli_asset_index.rs  cli_asset_list.rs  cli_asset_new_rename.rs  cli_asset_remove.rs  cli_asset_rename.rs  cli_asset_update.rs  cli_b1_mind_only.rs  cli_b2_thin_alias.rs  cli_build.rs  cli_c_signatures.rs  cli_config.rs  cli_confirm_protocol.rs  cli_create_contract.rs  cli_deprecation.rs  cli_envelope_shape.rs  cli_error_hint_scan.rs  cli_global_flags.rs  cli_help.rs  cli_identity.rs  cli_layout.rs  cli_mind_yaml_compat.rs  cli_modify_contract.rs  cli_placeholders.rs  cli_project_index.rs  cli_project_lint.rs  cli_project_path_identity.rs  cli_project_remove.rs  (+55 more)
(+282 files in other folders)
