[package]
name = "mf"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
description = "mind-forge CLI framework"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "wrap_help", "suggestions"] }
clap_complete = "4.5"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
terminal_size = "0.4"
pinyin = "0.10"
jieba-rs = "0.7"
unicode-width = "0.1"
walkdir = "2"
futures = "0.3"

# Advanced Sources (LanceDB RAG)
lancedb = "0.31.0"
arrow-array = "58"
arrow-schema = "58"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
fastembed = "5.17.2"
sha2 = "0.10"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
scraper = "0.27"
feed-rs = "2.4"
pdf-extract = "0.12"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
